--- a/client/index.html
+++ b/client/index.html
@@ -12,21 +12,15 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600&family=Outfit:wght@400;500;700&family=Syne:wght@700;800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600&family=Outfit:wght@400;500;700&family=Syne:wght@700;800&display=swap"
+    rel="stylesheet">
+  <link rel="icon" type="image/png" href="/favicon.png" />
   <title>Undercover</title>
 </head>
 
 <body>
   <div id="root"></div>
-  <script>
-    window.onerror = function (msg, url, lineNo, columnNo, error) {
-      alert('Error: ' + msg + '\nURL: ' + url + '\nLine: ' + lineNo + '\nColumn: ' + columnNo + '\nStack: ' + (error ? error.stack : 'no stack'));
-      return false;
-    };
-    window.onunhandledrejection = function (event) {
-      alert('Unhandled Rejection: ' + event.reason);
-    };
-  </script>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
